# memory-context-manager_v2

./: .cursorrules  .gitignore  AGENT_FRIENDLY_TOOLS_SUMMARY.md  BRAIN_INTERFACE_GUIDE.md  BRAIN_PLUGIN_STRUCTURE.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  COGNITIVE_RESTRUCTURING_SUMMARY.md  CURRENT_TOOLS_ANALYSIS.md  CURSOR_SETUP.md  CURSOR_SETUP_COMPLETE.md  DATABASE_INTEGRATION_COMPLETE.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.shareable  ENHANCED_CONTEXT_SYSTEM_README.md  FINAL_100_PERCENT_INTEGRATION_FIX.md  GITHUB_ACTIONS_FINAL_STATUS.md  GITHUB_ACTIONS_FIX_SUMMARY.md  GITHUB_ACTIONS_SUCCESS_SUMMARY.md  INTEGRATION_FIXES_APPLIED.md  INTEGRATION_GUIDE.md  INTEGRATION_TEST_FIXES_FINAL.md  INTEGRATION_TEST_GUIDE.md  INTEGRATION_TEST_SUMMARY.md  MAINTENANCE_REPORT.md  OPTIMIZATION_ANALYSIS.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_5_COMPLETION_SUMMARY.md  PHASE_7A_COMPLETION_SUMMARY.md  PHASE_7_ROADMAP.md  PRODUCTION_INTEGRATION_GUIDE.md  PROJECT_ORGANIZATION.md  PROJECT_STRUCTURE.md  README.md  README_RESTRUCTURED_SYSTEM.md  RESTRUCTURED_COGNITIVE_SYSTEM.md  (+113 more)
.cursor/: README.md  mcp-enhanced.json  mcp.json
brain_memory_store/: brain.db  brain.db-shm  brain.db-wal  brain_state.json  identities.json
config/: mcp-server-config-shareable.json
core/: __init__.py
database/: brain_db.py  storage_adapter.py  web_crawler_schema.sql
docs/: AGENT_FRIENDLY_TOOLS_SUMMARY.md  AI_BRAIN_ACTIVATION_SUMMARY.md  CLEANUP_SUMMARY.md  COMPLETE_SYSTEM_OPTIMIZATION_ANALYSIS.md  (+12 more)
(+95 files in other folders)
